--- a/Projetos.html
+++ b/Projetos.html
@@ -29,8 +29,16 @@
 
     <a href="http://elianemeira.github.io">
         http://elianemeira.github.io
-    </a><br/> 
-
+    </a>
+    <br/> 
+<a href="https://elianemeira.github.io/Pagina.io/">
+    https://elianemeira.github.io/Pagina.io/
+</a>
+<br/>    
+<a href="https://elianemeira.github.io/Cardapio/">
+    https://elianemeira.github.io/Cardapio/
+</a>
+<br/>
     </head>
     <body>
         <div>
