Atualização do Rodapé do site

--- a/Certificados.html
+++ b/Certificados.html
@@ -12,7 +12,7 @@
         <h2>Certificados Minecraft</h2>
     </div>
         <br/>
-        <img src="img/Certificado hora do codigo1.jpg">
+        <img src="./img/Certificado hora do codigo1.jpg">
         <br/>
         <hr>
                 </div>
@@ -25,15 +25,25 @@
         <div class="formtex">
         <h2>Certificado Escola do Trabalhador 4.0</h2> 
         <br>
-        <img src="img/Crie Digital.jpeg" width="70%">
+        <img src="./img/Crie Digital.jpeg">
         <hr>
         <br/>
+        <div class="formte">
+            <h2>Certificados IBM Udemy</h2> 
+            <br>
+            <img src="./img/Udemy.jpg" width="70%">
+            <hr>
+            <br/>
         <nav>
-            |<a title="vai para a página Sobre Mim"
-        href="SobreMim.html">Sobre Mim</a>
-
-        |<a title="vai para a página Projetos" 
+            |<a title="Vai para a página inicial"
+            href="./index.html">Inicio</a>
+            |<a title= "vai para a página de Certificados"
+        href="Certificados.html">Certificados</a>
+        |<a title="vai para a página Certificados" 
         href="Projetos.html">Projetos</a>
+        |<a title="vai para a página Projetos" 
+        href="FaleConosco.html">Fale Conosco</a>
+        <br/>
                </nav>
                <br/>
         <div>
