--- a/FaleConosco.html
+++ b/FaleConosco.html
@@ -53,6 +53,15 @@ placeholder="Digite seu nome Telefone" />
 <hr>
         </address>
         <div>
+            |<a title="Vai para a página inicial"
+        href="./index.html">Inicio</a>
+        |<a title= "vai para a página de Certificados"
+    href="Certificados.html">Certificados</a>
+    |<a title="vai para a página Certificados" 
+    href="Projetos.html">Projetos</a>
+    |<a title="vai para a página Projetos" 
+    href="FaleConosco.html">Fale Conosco</a>
+    <br/>
             <img src="img/Whatsapp.png"/><a href="#">
                 WhatsApp: <a href="https://wa.me/c/5511964483455">https://wa.me/c/5511964483455</a>
             </a><br/>
