--- a/Projetos.html
+++ b/Projetos.html
@@ -45,11 +45,15 @@
             <nav>
                 <br/>
                 <hr>
-                |<a title= "vai para a página de Certificados"
-                href="Certificados.html">Certificados</a>
-                <div>
-                |<a title="vai para a página Projetos" 
-                href="Projetos.html">Projetos</a>
+                |<a title="Vai para a página inicial"
+        href="./index.html">Inicio</a>
+        |<a title= "vai para a página de Certificados"
+    href="Certificados.html">Certificados</a>
+    |<a title="vai para a página Certificados" 
+    href="Projetos.html">Projetos</a>
+    |<a title="vai para a página Projetos" 
+    href="FaleConosco.html">Fale Conosco</a>
+    <br/>
                 </nav>
                 <br/>
                 <img src="img/Likedin.png"/><a href="#">
