--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <p>Porém me sinto movida pelo desafio de uma vida melhor e creio que o caminho é a Tecnologia. E por essa razão estudo e estou me aperfeiçoando dia após dia na área de TI com foco no desenvolvimento de software.
         <p>Busco oportunidade de ingressar nessa área de TI mesmo que ainda não com programação.
         <p>Tenho habilidade em lidar com pessoas, trabalhar em equipe, sou proativa, pontual e determinada. Possuo boa comunicação e sei lidar com dificuldades sem perder o sorriso no rosto.
-        <p>Nesse momento estou estudando sobre a programação do Front End. Já conheço um pouco de HTML, CSS, Javascript e Python com Visual Studio Code. Tenho gostado muito do que vi até aqui. Só falta uma oportunidade de início.
+        <p>Nesse momento estou estudando sobre a área de programação do Front End. HTML, CSS, Javascript, Bootstrap, Jquery, Python, Flask, PHP, Banco de Dados MySQL, Java com Visual Studio Code, e curso do Canva. Tenho gostado muito do que vi até aqui. Só falta uma oportunidade de início.
             <br> 
         <p>E aí? Gostou do meu perfil?
         <p>Me chama para conversar, quem sabe eu sou a profissional que sua empresa precisa?
@@ -40,13 +40,12 @@
     </h5>
     </div>
 </div>
-<div class="btn">Linkedin>
+<div class="btn">Linkedin
     <li>
     <a href="https://www.linkedin.com/in/eliane-meira-goncalves-araujo-043762143/">
 </li>
     </a>
 </div>
-
 </nav>
 <br>
     |<a title= "vai para a página de Certificados"
@@ -73,8 +72,21 @@ href="FaleConosco.html">Fale Conosco</a>
 </section>
 <hr>
 <footer>
+</div>
+    <a title="vai para a página Fale Conosco" 
+href="FaleConosco.html">Contato</a>
+<br/>
+    Endereço: Jardim Ângela - São Paulo - SP -Brasil
+    Cep: 05863-170
+    <br/>
+    Telefone:<a href="11964483455">(11)96448-3455</a>
+    e-mail:<a href="eliane.meira.g.a@hottmail.com">eliane.meira.g.a@hotmail.com</a>
+        <br/>
+        <br/>
+<section>
     <div>
-        Inicio
+        |<a title="Vai para a página inicial"
+        href="./index.html">Inicio</a>
         |<a title= "vai para a página de Certificados"
     href="Certificados.html">Certificados</a>
     |<a title="vai para a página Certificados" 
@@ -82,42 +94,21 @@ href="FaleConosco.html">Fale Conosco</a>
     |<a title="vai para a página Projetos" 
     href="FaleConosco.html">Fale Conosco</a>
     <br/>
-</div>
-    <a title="vai para a página Fale Conosco" 
-href="FaleConosco.html">Contato</a>
-    Endereço: Jardim Ângela - São Paulo - SP -Brasil
-    Cep: 05863-170
-    Telefone:<a href="11964483455">(11)96448-3455</a>
-    e-mail:<a href="eliane.meira.g.a@hottmail.com">eliane.meira.g.a@hotmail.com</a>
-        <br/>
-        <br/>
+    <br/>
     <div>
-            <img src="img/Whatsapp.png"/><a href="#">
-            WhatsApp: <a href="https://wa.me/c/5511964483455">https://wa.me/c/5511964483455</a>
-        </a><br/>
-            <img src="img/Likedin.png"/><a href="#">
-            Linkedin:<a href="https://www.linkedin.com/in/eliane-meira-goncalves-araujo-043762143/">
-            https://www.linkedin.com/in/eliane-meira-goncalves-araujo-043762143/</a>
-        </a><br/>
-            <img src="img/Instagram.png"/><a href="#">
-            Instagram: <a href="https://www.instagram.com/invites/contact/?i=66idjt68gr8q&utm_content=oeq3pk6">
-            https://www.instagram.com/invites/contact/?i=66idjt68gr8q&utm_content=oeq3pk6 "Estou no Instagran como @elianeeluana.trancas."</a>
-        </a><br/>
-            </a>
-
-        </div>
-</footer>
-<section>
-
-    <a title= "vai para a página de Certificados"
-    href="Certificados.html"></a>
-
-    <a title="vai para a página Projetos" 
-    href="Projetos.html"></a>
-
-    <a title="vai para a página Fale Conosco" 
-href="FaleConosco.html">Fale Conosco</a>
-    
+        <img src="img/Whatsapp.png"/><a href="#">
+        WhatsApp: <a href="https://wa.me/c/5511964483455">https://wa.me/c/5511964483455</a>
+    </a><br/>
+        <img src="img/Likedin.png"/><a href="#">
+        Linkedin:<a href="https://www.linkedin.com/in/eliane-meira-goncalves-araujo-043762143/">
+        https://www.linkedin.com/in/eliane-meira-goncalves-araujo-043762143/</a>
+    </a><br/>
+        <img src="img/Instagram.png"/><a href="#">
+        Instagram: <a href="https://www.instagram.com/invites/contact/?i=66idjt68gr8q&utm_content=oeq3pk6">
+        https://www.instagram.com/invites/contact/?i=66idjt68gr8q&utm_content=oeq3pk6 "Estou no Instagran como @elianeeluana.trancas."</a>
+    </a><br/>
+        </a>
+    </div>
     </section>
     <div>
        <a href="TermoDeUso.html"></a> Todos os direitos reservados ()2022 ></a>
@@ -125,6 +116,8 @@ href="FaleConosco.html">Fale Conosco</a>
     </div>
     </div>
     </div>
+</footer>
+<br/>
 </body>
 <!-- JavaScript Bundle with Popper -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
